style.css
@import url(https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css);

:root {
  --makki-toast-bg-color: #FFFFFF;
  --makki-toast-bg-color-hover: #FFFFFF;
}

.makki-toast-container {
  position: fixed;
  margin: 10px;
  width: 250px;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.makki-toast-container[data-position^="top-"] {
  top: 0;
}

.makki-toast-container[data-position^="bottom-"] {
  bottom: 0;
}

.makki-toast-container[data-position$="-right"] {
  right: 0;
}

.makki-toast-container[data-position$="-left"] {
  left: 0;
}

.makki-toast-container[data-position$="-center"] {
  left: 50%;
  transform: translate(-50%);
}

.makki-toast {
  display: flex;
  align-items: center;
  box-sizing: border-box;
  padding: 0.75rem 1.5rem 1rem 0.75rem;
  background-color: white;
  border-radius: .25em;
  position: relative;
  cursor: pointer;
  opacity: 0;
  font-size: 14px;
  font-weight: 500;
  transition: 200ms ease-in-out;
  overflow: hidden;
}

.makki-toast-container[data-position$="-right"] .makki-toast {
  transform: translateX(50px);
}

.makki-toast-container[data-position$="-left"] .makki-toast {
  transform: translateX(-50px);
}

.makki-toast-container[data-position="top-center"] .makki-toast {
  transform: translateY(-50px);
}

.makki-toast-container[data-position="bottom-center"] .makki-toast {
  transform: translateY(50px);
}

.makki-toast-container .makki-toast.makki-show {
  opacity: 0.9;
  transform: translate(0, 0);
}

.makki-toast-container .makki-toast.makki-show.makki-close {
  opacity: 0;
  transform: translate(0, 0) scale(0.75);
  transition: 250ms ease-in-out;
}

.makki-toast.makki-progress::before {
  content: '';
  position: absolute;
  height: 5px;
  width: calc(100% * var(--makki-progress));
  background-color: var(--makki-progress-bg);
  bottom: 0;
  left: 0;
  right: 0;
}

.makki-toast.makki-can-close::after {
  content: "\00D7";
  position: absolute;
  top: 4px;
  right: 8px;
}

.makki-toast-icon {
  margin-right: 0.5rem;
  font-size: 20px;
}

.makki-success.makki-light-toast {
  background-color: #328E4F;
  color: #EDF2F7;
}

.makki-success.makki-dark-toast {
  background-color: #68CA87;
  color: #2D3748;;
}

.makki-success.makki-light-toast:hover,
.makki-success.makki-dark-toast:hover {
  background-color: #38A95C;
  opacity: 1;
}

.makki-warning.makki-light-toast {
  background-color: #d8b73d;
  color: #2D3748;
}

.makki-warning.makki-dark-toast {
  background-color: #fde692;
  color: #2D3748;
}

.makki-warning.makki-dark-toast:hover,
.makki-warning.makki-light-toast:hover {
  background-color: #ECC94B;
  opacity: 1;
  color: #2D3748;
}

.makki-danger.makki-light-toast {
  background-color: #9C3030;
  color: #EDF2F7;
}

.makki-danger.makki-dark-toast {
  background-color: #e76f6f;
  color: #EDF2F7;
}

.makki-danger.makki-light-toast:hover,
.makki-danger.makki-dark-toast:hover {
  background-color: #D74B4B;
  opacity: 1;
}

.makki-light-toast.makki-none,
.makki-dark-toast.makki-none {
  background-color: var(--makki-toast-bg-color);
  opacity: 0.9;
}

.makki-light-toast.makki-none:hover,
.makki-dark-toast.makki-none:hover {
  background-color: var(--makki-toast-bg-color-hover);
  color: var(--makki-toast-bg-color-text) !important;
  opacity: 1;
}

.makki-background {
  background-color: #1b1b1b;
}

